[gd_scene load_steps=6 format=3 uid="uid://dcaotwjpbc38f"]

[ext_resource type="Script" uid="uid://bvd2gbybyeabl" path="res://Scripts/Workbench.gd" id="1_2mgss"]
[ext_resource type="Texture2D" uid="uid://cyfulbnqpelrs" path="res://Assets/Workbench.png" id="2_hslw2"]
[ext_resource type="Script" uid="uid://c8c3e8mbwoatx" path="res://Scripts/WorkbenchInventoryGrid.gd" id="3_hslw2"]
[ext_resource type="Texture2D" uid="uid://dro1tpojeahuf" path="res://Assets/CraftingSlot.png" id="4_0m77r"]
[ext_resource type="Script" uid="uid://cvnfqxcn5ntnb" path="res://Scripts/CraftingSlot.gd" id="5_i3h46"]

[node name="Workbench" type="Node2D"]
script = ExtResource("1_2mgss")

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("2_hslw2")

[node name="Button" type="Button" parent="TextureRect"]
layout_mode = 0
offset_left = 139.0
offset_top = 1334.0
offset_right = 313.0
offset_bottom = 1380.0
text = "Main Room View"

[node name="inventory_workbench" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="inventory_workbench"]
position = Vector2(77, 497)
polygon = PackedVector2Array(216, -298, 37, 460, -74, 461, -72, -361, -20, -273, 153, -303)

[node name="WorkbenchInventoryGrid" type="GridContainer" parent="."]
offset_left = 113.0
offset_top = 135.0
offset_right = 1523.0
offset_bottom = 1288.0
columns = 4
script = ExtResource("3_hslw2")

[node name="WorkbenchDragLayer" type="Control" parent="." groups=["active_drag_layer"]]
layout_mode = 3
anchors_preset = 0

[node name="CraftingSlot" type="TextureRect" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1157.0
offset_top = 628.0
offset_right = 1289.0
offset_bottom = 760.0
grow_horizontal = 0
grow_vertical = 0
mouse_filter = 0
texture = ExtResource("4_0m77r")
script = ExtResource("5_i3h46")

[connection signal="pressed" from="TextureRect/Button" to="." method="_on_button_pressed"]
[connection signal="input_event" from="inventory_workbench" to="." method="_on_inventory_workbench_input_event"]
